# looper

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  pre-merge.sh  rust_dependency_change.sh  rustfmt.toml
assets/: BUILD.bazel  wav_tool.rs
assets/clips/: BUILD.bazel
assets/filters/: BUILD.bazel  low_pass.txt
assets/instruments/: BUILD.bazel  credits.txt  drums1.json  drums1.yaml
dat/config/: BUILD.bazel  missing_device_type.json  missing_device_type.yaml  missing_devices.json  missing_devices.yaml  missing_variables.yaml  valid.json  valid.yaml  variables.yaml
dat/instrument/: inline.json  inline.yaml  no_instrument.json  no_instrument.yaml  valid.json  valid.yaml
dat/looper/: loop1.json  loop1.yaml
dat/low_pass/: BUILD.bazel  low_pass1.yaml  low_pass_unit_test.txt
dat/tempo/: tempo.json  tempo.yaml
pip/: BUILD.bazel  requirements.in  requirements_lock.txt
projects/: BUILD.bazel  drums.yaml  test.json  test.loop  test.yaml  test2.json  test2.yaml  test3.yaml  vacation.json
python/: pybind.bzl
src/: BUILD.bazel  main.cc  main.rs
src/audio/: BUILD.bazel  audio.cc  audio.h  audio.rs  recorder.rs  wav.rs
src/framework/: BUILD.bazel  block.cc  block.h  block.rs  config.cc  config.h  config.rs  datatypes.h  json_util.cc  json_util.h  keyboard.cc  keyboard.h  keyboard.rs  log.h  log.rs  runner.cc  runner.h  runner.rs  runner_py.cc  sampler.cc  sampler.h  sampler.rs  segment.cc  segment.h  segment.rs  stream.cc  stream.h  stream.rs  tempo.cc  tempo.h  tempo.rs  time.h  timer.rs  volume.cc  volume.h  wav.cc  wav.h
src/modules/: BUILD.bazel  modules.h
src/transform/: BUILD.bazel  combiner.cc  combiner.h  combiner.rs  looper.cc  looper.h  looper.rs  low_pass.rs  toggle.cc  toggle.h  toggle.rs
src/transformers/: BUILD.bazel  combiner.cc
src/virtual/: BUILD.bazel  instrument.cc  instrument.h  instrument.rs  metronome.cc  metronome.h  metronome.rs
tools/dsp/: BUILD.bazel  butterworth.py  filter_tables.py  sim.py
tools/rust/: rust.bzl
web/: BUILD.bazel  file_io.py  monitor.py  server.py
web/static/: BUILD.bazel  index.css  index.js
web/static/model/: blocks.js  segments.js
web/static/ui/: devices.js  layer-create.js  layer.js  project.js  ruler.js  segment.js  ui.js  util.js  vertical-bar.js
web/templates/: BUILD.bazel  index.html
