load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "server",
    srcs = ["server.py"],
    deps = [
        requirement("flask"),
    ],
    data = [
        "//web/static:static",
        "//web/templates:templates",
    ]
)