load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "lib",
    srcs = ["file_io.py"],
)

py_binary(
    name = "server",
    srcs = ["monitor.py", "server.py"],
    deps = [
        "//src/framework:looper",
        requirement("flask"),
        requirement("flask-socketio"),
    ],
    data = [
        "//web:lib",
        "//web/static:static",
        "//web/templates:templates",
    ],
    imports = ["."],
)