load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "audio",
    srcs = [
        "audio.rs",
    ],
    deps = [
        "@crate_index//:portaudio",
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:stream",
        "//src/framework:tempo",
    ]
)

rust_library(
    name = "wav",
    srcs = [
        "wav.rs",
    ],
    deps = [
        "@crate_index//:hound",
        "//src/framework:log",
        "//src/framework:stream",
    ]
)
