load("//tools/rust:rust.bzl", "looper_library")

package(default_visibility = ["//visibility:public"])

looper_library(
    name = "audio",
    srcs = [
        "audio.rs",
    ],
    deps = [
        "@crate_index//:portaudio",
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:stream",
        "//src/framework:tempo",
    ]
)

looper_library(
    name = "recorder",
    srcs = [
        "recorder.rs",
    ],
    deps = [
        "@crate_index//:hound",
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:segment",
        "//src/framework:stream",
        "//src/framework:tempo",
        ":wav",
    ]
)

looper_library(
    name = "wav",
    srcs = [
        "wav.rs",
    ],
    deps = [
        "@crate_index//:hound",
        "//src/framework:log",
        "//src/framework:stream",
    ]
)
