load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

# Top level API for interfacing with looper.
rust_library(
    name = "runner",
    srcs = ["runner.rs"],
    deps = [
        "//src/audio:audio",
        "//src/transform:looper",
        "//src/virtual:metronome",
        ":block",
        ":config",
        ":log",
        ":stream",
        ":tempo",
    ]
)

rust_library(
    name = "config",
    srcs = [
        "config.rs",
    ],
    deps = [
        "@crate_index//:json",
        ":log",
        ":segment",
    ]
)

rust_library(
    name = "stream",
    srcs = [
        "stream.rs",
    ]
)

rust_library(
    name = "block",
    srcs = [
        "block.rs",
    ],
    deps = [
        ":tempo",
    ]
)

rust_library(
    name = "log",
    srcs = [
        "log.rs",
    ],
)

rust_library(
    name = "sampler",
    srcs = [
        "sampler.rs",
    ],
    deps = [
        ":log",
        ":stream",
    ]
)

rust_library(
    name = "tempo",
    srcs = [
        "tempo.rs",
    ],
    deps = [
        ":config",
        ":stream",
    ]
)

rust_library(
    name = "segment",
    srcs = [
        "segment.rs",
    ],
    deps = [
        ":log",
    ]
)
