load("//tools/rust:rust.bzl", "looper_library")

package(default_visibility = ["//visibility:public"])

# Top level API for interfacing with looper.
looper_library(
    name = "runner",
    srcs = ["runner.rs"],
    deps = [
        "//src/audio:audio",
        "//src/transform:combiner",
        "//src/transform:looper",
        "//src/transform:toggle",
        "//src/virtual:metronome",
        "//src/virtual:instrument",
        ":block",
        ":config",
        ":keyboard",
        ":log",
        ":stream",
        ":tempo",
    ]
)

looper_library(
    name = "config",
    srcs = [
        "config.rs",
    ],
    deps = [
        "@crate_index//:json",
        ":log",
        ":segment",
    ],
    test_data = [
        "//dat/config:data",
    ]
)

looper_library(
    name = "stream",
    srcs = [
        "stream.rs",
    ]
)

looper_library(
    name = "block",
    srcs = [
        "block.rs",
    ],
    deps = [
        ":keyboard",
        ":tempo",
    ]
)

looper_library(
    name = "log",
    srcs = [
        "log.rs",
    ],
)

looper_library(
    name = "sampler",
    srcs = [
        "sampler.rs",
    ],
    deps = [
        ":log",
        ":stream",
    ]
)

looper_library(
    name = "tempo",
    srcs = [
        "tempo.rs",
    ],
    deps = [
        ":config",
        ":stream",
    ]
)

looper_library(
    name = "segment",
    srcs = [
        "segment.rs",
    ],
    deps = [
        ":log",
    ]
)

looper_library(
    name = "keyboard",
    srcs = [
        "keyboard.rs",
    ],
    deps = [
        "@crate_index//:filedescriptor",
        "@crate_index//:termios",
        ":log",
    ]
)
