load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "looper",
    srcs = [
        "looper.rs",
    ],
    deps = [
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:sampler",
        "//src/framework:segment",
        "//src/framework:stream",
        "//src/framework:tempo",
    ],
)
