load("//tools/rust:rust.bzl", "looper_library")

package(default_visibility = ["//visibility:public"])

looper_library(
    name = "combiner",
    srcs = [
        "combiner.rs",
    ],
    deps = [
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:stream",
    ]
)

looper_library(
    name = "looper",
    srcs = [
        "looper.rs",
    ],
    deps = [
        "//src/audio:wav",
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:sampler",
        "//src/framework:segment",
        "//src/framework:stream",
    ],
)

looper_library(
    name = "toggle",
    srcs = [
        "toggle.rs",
    ],
    deps = [
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:segment",
        "//src/framework:stream",
    ]
)
