package(default_visibility = ["//visibility:public"])

cc_library(
    name = "virtual",
    srcs = ["instrument.cc", "metronome.cc"],
    hdrs = ["instrument.h", "metronome.h"],
    deps = [
        "//src/framework:framework",
        "//src/framework:keyboard",
        "//src/framework:sampler",
        "//src/framework:tempo",
        "//src/framework:volume",
        "//src/framework:wav",
    ],
    data = [
        "//assets/clips",
        "//assets/instruments",
    ]
)