load("//tools/rust:rust.bzl", "looper_library")

package(default_visibility = ["//visibility:public"])

looper_library(
    name = "instrument",
    srcs = [
        "instrument.rs",
    ],
    deps = [
        "@crate_index//:yaml-rust",
        "//src/audio:wav",
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:sampler",
        "//src/framework:stream",
        "//src/framework:tempo",
    ],
    data = [
        "//assets/clips",
        "//assets/instruments",
    ],
    test_data = [
        "//dat/instrument:data",
    ],
)

looper_library(
    name = "metronome",
    srcs = [
        "metronome.rs",
    ],
    deps = [
        "//src/audio:wav",
        "//src/framework:block",
        "//src/framework:config",
        "//src/framework:log",
        "//src/framework:sampler",
        "//src/framework:segment",
        "//src/framework:stream",
        "//src/framework:tempo",
    ],
    data = [
        "//assets/clips",
    ]
)